# trustcaptcha-samples

./: README.md
samples/backends/csharp-sample/: .gitignore
samples/backends/csharp-sample/SampleWebApp/: Program.cs  SampleWebApp.csproj  SampleWebApp.http  csharp-sample.csproj
samples/backends/go-sample/: go.mod  go.sum  main.go
samples/backends/nodejs-sample/: package-lock.json  package.json
samples/backends/nodejs-sample/src/: index.ts
samples/backends/python-sample/: .gitignore  main.py
samples/backends/ruby-sample/: Gemfile  README.md  app.rb
samples/backends/rust-sample/: Cargo.toml  README.md
samples/backends/rust-sample/src/: main.rs
samples/backends/spring-groovy-sample/: build.gradle  settings.gradle
samples/backends/spring-java-sample/: build.gradle  settings.gradle
samples/backends/spring-kotlin-sample/: build.gradle.kts  settings.gradle.kts
samples/backends/spring-scala-sample/: .gitignore  build.sbt
samples/frontends/angular-sample/: .gitignore  README.md  angular.json  package-lock.json  package.json
samples/frontends/angular-sample/src/: index.html
samples/frontends/react-sample/: .gitignore  README.md  package-lock.json  package.json
samples/frontends/react-sample/public/: index.html
samples/frontends/react-sample/src/: App.js  apiService.js
samples/frontends/vue-sample/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
samples/fullstack/php/: .gitignore  README.md  composer.json  index.php
samples/fullstack/spring-thymeleaf-sample/: build.gradle  settings.gradle
(+30 files in other folders)
